# KiField

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  beautify  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  kifield-feature-request.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_build/singlehtml/: index.html
kifield/: __init__.py  __main__.py  common.py  dcm.py  kifield.py  pckg_info.py  sch.py  schlib.py
tests/: CAT-cache.lib  FPGA_CFG.sch  FPGA_IO.sch  FPGA_PWR.sch  Memory.sch  leaf.sch  randomizer.py  test.mk  test_explode.py  test_group_wb.py  test_kifield.py
tests/integration/: CAT.pro  CAT.sch  FPGA.sch  FPGA_CFG.sch  FPGA_IO.sch  FPGA_PWR.sch  NeoESP.pro  NeoESP.sch  RPi_GPIO.sch  cat.xlsx  del.csv  hier_test-cache.lib  hier_test.sch.v4  hier_test2-cache.lib  hierarchical_schematic.kicad_pro  in.csv  insert_dcm.py  integration-rescue.lib  leaf1.kicad_sch  led7.sch  nonascii.csv  random_circuit.kicad_sch  randomizer.py  resistor_nonascii.csv  resistor_nonascii.sch  test.csv  test.mk
tests/integration/kicad5/: hier_test.pro.v4  hier_test2.csv  hier_test2.sch  insert_dcm.py  leaf.sch  test.mk  xess.csv  xess.lib
tests/integration/kicad6/: Amplifier_Video.kicad_sym  hierarchical_schematic.kicad_prl  hierarchical_schematic.kicad_sch  leaf2.kicad_sch  test.mk
tests/integration/kicad7/: Amplifier_Video.kicad_sym  hierarchical_schematic.kicad_prl  leaf1.kicad_sch  (+6 more)
tests/unit/: test_common.py  test_explode.py  test_group_wb.py  test_kifield.py
(+15 files in other folders)
