[wheel]
universal = 1

[metadata]
# Add here related links, for example:
project_urls =
    Documentation = https://devbisme.github.io/KiField/docs/_build/singlehtml/index.html
    Source = https://github.com/devbisme/kifield
    Changelog = https://github.com/devbisme/KiField/blob/master/HISTORY.rst
    Tracker = https://github.com/devbisme/kifield/issues
